CPK Refactoring, making tests